[package]
name = "isosphere"
version = "0.0.1"
description = "Library of ISO standard data types, helpers, and related utilities"
categories = ["data-structures", "encoding", "finance", "internationalization", "localization"]
keywords = ["codes", "country", "currency", "iso", "language"]
edition = "2021"
license = "MIT"
authors = ["Dan Williams <dan@dotfive.co.uk>"]
repository = "https://github.com/danwilliams/isosphere"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = 3    # Maximum optimisation (this is the cargo default)
lto = "thin"     # Enable link-time optimisation (fast)

[dependencies]
