[package]
name = "isosphere"
version = "0.1.0"
description = "Library of ISO standard data types, helpers, and related utilities"
categories = ["data-structures", "encoding", "finance", "internationalization", "localization"]
keywords = ["codes", "country", "currency", "iso", "language"]
edition = "2021"
license = "MIT"
authors = ["Dan Williams <dan@dotfive.co.uk>"]
repository = "https://github.com/danwilliams/isosphere"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = 3    # Maximum optimisation (this is the cargo default)
lto = "thin"     # Enable link-time optimisation (fast)

[features]
reasons = []

[dependencies]
once_cell = "1.19.0"
rubedo = "0.5.2"
serde = { version = "1.0.197", features = ["derive"] }
utoipa = "4.2.0"
velcro = "0.5.4"

[dev-dependencies]
claims = "0.7.1"
serde_json = { version = "1.0.115", features = ["preserve_order"] }
